# 01-rcli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  test.rest
docs/: 01.csv.md  02.genpass.md  03.base64.md  04.file_sign.md  05.http_serve.md  06.http_tower.md  07.enum_dispatch.md  index.html  w02.md
fixtures/: chacha20_key.txt  chacha20_nonce.txt  ed25519.pk  ed25519.sk  index.html  template.html
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  jwt.rs  text.rs
