[package]
name = "rcli"
version = "0.1.0"
authors = ["kailan yue <yuekailan@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["http2", "query", "tracing"] }
base64 = "0.22"
blake3 = "1.5"
chacha20poly1305 = { version = "0.10", features = ["rand_core"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
enum_dispatch = "0.3"
handlebars = "6.0"
humantime = "2.1"
jsonwebtoken = "9.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = "0.3"
tokio = { version = "1.40", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
] }
tower-http = { version = "0.5", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zxcvbn = "3.1"
